split coalition, projects providers, fix registration flow, coverage … (#97)
* split coalition, projects providers, fix registration flow, coverage (#96)

Co-authored-by: openmike <muxaujish@gmail.com>

* increase coverage (#98)

Co-authored-by: openmike <muxaujish@gmail.com>

---------

Co-authored-by: openmike <muxaujish@gmail.com>